continue a apis and do UTC time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.uri = mongodb://localhost:27017/hairbook
 spring.data.mongodb.database = hairbook
 
+server.address = 0.0.0.0
 server.port = 443
